add task 14 and 15

--- a/Week5/fine_tuning_distilgpt2_quy_le.ipynb
+++ b/Week5/fine_tuning_distilgpt2_quy_le.ipynb
@@ -2765,7 +2765,16 @@
       "source": [
         "# Task 14: Capture and Document Results\n",
         "\n",
-        "Checkout this Github Repo: "
+        "Checkout this Github Repo: https://github.com/minhquyminhquy/COMP.CS.530-Fine-tuning-LLM/tree/main/Week5"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Task 15: Submit the Assignment\n",
+        "\n",
+        "Checkout this Github Repo: https://github.com/minhquyminhquy/COMP.CS.530-Fine-tuning-LLM/tree/main/Week5"
       ]
     }
   ],
